--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-
-# 실행/계정 환경변수 예시 (.env 로 복사)
-RUN_AT=
-LOGIN_URL=
-RESERVATION_URL=
+# 환경
+RUN_AT=09:00:00
+LOGIN_URL=https://www.geumcheon.go.kr/portal/login.do?key=996
+# RESERVATION_URL=https://www.geumcheon.go.kr/reserve/webErntView.do?key=115&searchErntNo=140305
+RESERVATION_URL=https://www.geumcheon.go.kr/reserve/erntApplcntStep01.do?key=115&searchErntNo=140305&sYear=2025&sMonth=10
+# 본문
+PEOPLE=2
+PURPOSE=테니스
+# 로그인 계정
 USER_ID=
 USER_PW=
-TARGET_DATE=
-TARGET_SLOT=
-PEOPLE=
-PURPOSE=
-# (선택) 로그인 유지를 위한 크롬 프로필
-# CHROME_USER_DATA_DIR=C:\Users\USER\AppData\Local\Google\Chrome\User Data
